Turned off go modules when downaloding go dev tools.

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,10 +1,11 @@
 BIN_DIR := $(GOPATH)/bin
 LINTER := $(BIN_DIR)/golangci_lint
 FRESH := $(BIN_DIR)/fresh
+MODOFF := GO111MODULE=off
 
 $(LINTER):
 	cd $(GOPATH)
-	go get golang.org/x/lint/golint
+	$(MODOFF) go get golang.org/x/lint/golint
 
 .PHONY: lint
 lint: $(LINTER)
@@ -12,7 +13,7 @@ lint: $(LINTER)
 
 $(FRESH):
 	cd $(GOPATH)
-	go get github.com/pilu/fresh
+	$(MODOFF) go get github.com/pilu/fresh
 
 .PHONY: fresh
 fresh: $(FRESH)
