Docker image is now using make tool

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,10 @@
 FROM golang:1.13-alpine
 
+RUN apk add --no-cache make git
+
 WORKDIR /src/pants/app
 COPY . .
 
-RUN go get github.com/pilu/fresh
 RUN go get -d -v ./...
 
-CMD ["fresh"]
+CMD ["make", "fresh"]
