Added redis service do docker-compose file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
             - "8080:8080"
         volumes:
             - ./app:/src/pants/app:z
+        depends_on:
+            - redis
+    redis:
+        image: "redis:alpine"
