--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,9 @@
-FROM golang:1.13-alpine
-
-RUN apk add --no-cache make git
+FROM golang:1.13-buster
 
 WORKDIR /src/pants/app
 COPY . .
 
 RUN go get -d -v ./...
+RUN go build
 
 CMD ["make", "fresh"]
