--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,12 @@ services:
             - "8080:8080"
         volumes:
             - ./app:/src/pants/app:z
+        depends_on:
+            - view
+    view:
+        build:
+            context: ./view
+            dockerfile: Dockerfile
+        volumes:
+            - ./app/public:/src/pants/view/public:z
+            - ./view:/src/pants/view:z
